force-app/main/default/objects/NewsPulse__c/NewsPulse__c.object-meta.xml
<CustomObject>
    <label>NewsPulse</label>
    <nameField>
        <displayFormat>News-{0000}</displayFormat>
        <label>NewsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NewsPulse</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>