force-app/main/default/objects/NewsPulse__c/fields/Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Name__c</fullName>
    <label>Source_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>